--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,10 @@
   "name": "trueSelf",
   "version": "1.0",
   "description": "Replaces the text 'Ruby' with 'R.J.'",
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
   "browser_action": {
     "default_icon": {
       "16": "images/flagSmall.png",
