--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,23 @@
   "name": "trueSelf",
   "version": "1.0",
   "description": "Replaces the text 'Ruby' with 'R.J.'",
-  "options_ui": {
-    "page": "options.html",
-    "open_in_tab": false
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": true
   },
+  "permissions": [
+    "storage"
+  ],
   "browser_action": {
     "default_icon": {
       "16": "images/flagSmall.png",
       "48": "images/flagMedium.png",
       "128": "images/flagLarge.png"
     },
-    "default_title": "trueSelf",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_title": "trueSelf"
   },
   "content_scripts": [
     {
