--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "trueSelf",
+  "name": "True Self",
   "version": "1.0",
-  "description": "Replaces the text 'Ruby' with 'R.J.'",
+  "description": "Select a new name to display on web pages and become your True Self",
   "background": {
     "scripts": [
       "background.js"
