--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "persistent": true
   },
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
   ],
   "browser_action": {
     "default_icon": {
