--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "True Self",
-  "version": "1.1",
+  "version": "1.2",
   "description": "Select a new name to display on web pages and become your True Self",
   "background": {
     "scripts": [
@@ -10,8 +10,7 @@
     "persistent": true
   },
   "permissions": [
-    "storage",
-    "tabs"
+    "storage"
   ],
   "browser_action": {
     "default_icon": {
