--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,16 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "True Self",
-  "version": "1.2",
-  "description": "Select a new name to display on web pages and become your True Self",
-  "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": true
-  },
+  "version": "1.3",
+  "description": "Select your preferred name to display on web pages and become your True Self",
   "permissions": [
     "storage"
   ],
-  "browser_action": {
+  "background": {
+    "service_worker": "worker.js",
+    "type": "module"
+  },
+  "action": {
     "default_icon": {
       "128": "images/disabledIcon.png"
     },
